# HBAT-Software

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OWNERS.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-env.sh  dev-env.sh.save  hbat-software.code-workspace
HMSmain_Back_End/: .gitignore  CMakeLists.txt  HMSmain.cpp  README.md  example.cpp  platformio.ini  snippets.md
HMSmain_Back_End/HBAT_HMS_V1.0/: CMakeLists.txt  SecureOTA.hpp  SercureOTA.cpp  main.cpp
HMSmain_Back_End/data/: config.json  frontend.html  wifimanager.html
HMSmain_Back_End/extras/: example.md
HMSmain_Back_End/lib/BintrayClient/src/: BintrayCertificates.hpp
HMSmain_Back_End/lib/Data/: index.html.h
HMSmain_Back_End/lib/HMSFrontEnd/: FrontEnd.cpp  FrontEnd.h
HMSmain_Back_End/lib/HMSmain/: AccumulateData.cpp  AccumulateData.h  AccumulateData.hpp  CellTemp.hpp  FrontEnd.cpp  FrontEnd.h  FrontEnd.hpp  HMS.cpp  HMS.h  HMS.hpp  HMSNetwork.cpp  HMSNetwork.h  HMSmqtt.cpp  HMSmqtt.h  HMSmqtt.hpp  HMSnetwork.hpp  Humidity.cpp  Humidity.h  Humidity.hpp  I2cscan.cpp  RelayLogic.cpp  RelayLogic.h  asyncserver.cpp  celltemp.cpp  celltemp.h  config.cpp  config.h  config.hpp  defines.cpp  defines.h  defines.hpp  globaldebug.h  i2cscan.h  i2cscan.hpp  mqttconfig.h  timedtasks.hpp
HMSmain_Back_End/lib/HMSmain/src/: AccumulateData.cpp  AccumulateData.hpp  CellTemp.cpp  CellTemp.hpp  FrontEnd.cpp  FrontEnd.hpp  HMS.cpp  HMS.hpp  HMSNetwork.cpp  HMSmqtt.cpp  HMSmqtt.hpp  HMSnetwork.hpp  Humidity.cpp  Humidity.hpp  Relays.hpp  SecureOTA.cpp  SecureOTA.hpp  accumulatedata.cpp  accumulatedata.hpp  (+9 more)
HMSmain_Back_End/lib/JediTimer/: JediTimer.cpp  JediTimer.h
HMSmain_Back_End/src/: main.cpp
HMSmain_Back_End/test/: test.cpp
firmware/: Cargo.toml
firmware/src/onewire/: onewire.rs
(+97 files in other folders)
