[package]
edition = "2021"
name = "firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "stm32g0b1re",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.1.0", default-features = false, features = [
    "defmt",
] }
embedded-hal = "1.0.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
portable-atomic = { version = "1.6.0", features = [
    "unsafe-assume-single-core",
] }

[profile.release]
debug = 2
